--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>SDET_Final_Project</artifactId>
+  <artifactId>SDET_Final_Project_Last</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
